--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
         /* Hero Section */
         .hero {
-            background: transparent;
+            background: var(--navy);
             padding-top: 80px;
             min-height: 100vh;
             display: flex;
